Started to create the JS with API

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
         <h3 class="title">Confira o clima da cidade:</h3>
         <div class="inputs">
-            <input type="search" class="fieldSearch">
+            <input type="text" class="fieldSearch" placeholder="Digite o nome da cidade">
             <button type="submit" class="buttonSubmit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         
@@ -28,7 +28,7 @@
             <div class="dates">
                 <span class="weather">Nublado</span>
                 <span class="deg">15°C</span>
-                <img src="" alt="Condition image">
+                <img src="" alt="Image Condition" class="imageCondition">
             </div>
             <p class="conditionsWeather">Previsão de clima nublado, porem poucas chances de chuva.</p>
         </div>
