--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,13 @@
         </div>
         
         <div class="informations">
-            <h4 class="city">Cidade</h4>
+            <h1 class="city">Cidade <span class="country">-BR</span></h1>
             <div class="dates">
-                <span class="weather">Nublado</span>
-                <span class="deg">15°C</span>
-                <img src="" alt="Image Condition" class="imageCondition">
+                <div>
+                    <span class="deg">15°C </span>
+                    <img src="https://countryflagsapi.com/png/br" alt="Image Condition" class="imageCondition">
+                </div>
+                <p class="weather">Nublado</p>
             </div>
             <p class="conditionsWeather">Previsão de clima nublado, porem poucas chances de chuva.</p>
         </div>
