--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
 <body>
 
     <div class="container">
-
+        
         <div class="header">
-            <h3 class="title">Confira o clima da cidade:</h3>
+            <h3 class="title">Pesquise a cidade:</h3>
             <div class="inputs">
-                <input type="text" class="fieldSearch" placeholder="Digite o nome da cidade">
+                <input type="text" class="fieldSearch" placeholder="Digite a cidade">
                 <button type="submit" class="buttonSubmit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
         </div>
